docs: unify reference links
All IDemo implementations now have direct link to relevant JEPs/JBCs inside REFERENCES section of JavaDocs