@@ -8,12 +8,18 @@ import java.util.Random;
 
 /**
  * This class demonstrates new feature called Vector API.
+ * The status in Java 21 is INCUBATOR => JVM option `--add-modules=jdk.incubator.vector` is required to use it.
  *
- * Introduced: Java 16 (incubator)
- * Finalized: Java 20 (fifth-incubator)
+ * REFERENCES:
+ * Java 21 - https://openjdk.org/jeps/448 - Vector API (Sixth Incubator)
+ * Java 20 - https://openjdk.org/jeps/438 - Vector API (Fifth Incubator)
+ * Java 19 - https://openjdk.org/jeps/426 - Vector API (Fourth Incubator)
+ * Java 18 - https://openjdk.org/jeps/417 - Vector API (Third Incubator)
+ * Java 17 - https://openjdk.org/jeps/414 - Vector API (Second Incubator)
+ * Java 16 - https://openjdk.org/jeps/338 - Vector API (Incubator)
  *
  * Further reading:
- * https://openjdk.org/jeps/438
+ * https://www.linkedin.com/pulse/whats-new-java-21-meet-vector-api-alexey-iyunski
  * https://medium.com/@Styp/java-18-vector-api-do-we-get-free-speed-up-c4510eda50d2
  *
  * @author alois.seckar@atos.net
